<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/reg_first_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_last_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/reg_photo_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_picture_button"
            android:text="@string/reg_picture_button"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/reg_picture_checker"/>

    </LinearLayout>


    <Button
        android:id="@+id/reg_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_register_prompt" />

        <Button
            android:id="@+id/reg_login_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_register_button" />
    </LinearLayout>

</android.widget.LinearLayout>