<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/post_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/post_username"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_username"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_name"
                android:textAllCaps="false"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/post_says"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_says" />
        </LinearLayout>

        <TextView
            android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/post_body" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/post_attachment"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/post_time"
            android:text="fjdklsa;"/>
    </LinearLayout>

</LinearLayout>